--- a/Automated_Scraper_Gasbuddy.ipynb
+++ b/Automated_Scraper_Gasbuddy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3be1893d-d721-49d9-879e-7bd6a9bcedb6",
    "metadata": {},
    "outputs": [],
@@ -34,20 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "12a16bf8-38fa-485c-8955-cad528ab8b2e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def price_check(postal_code, fuel_type):\n",
-    "    url = ('https://www.gasbuddy.com/home?search=' +\n",
+    "    url = ('https://www.gasbuddy.com/home?search=+' +\n",
     "            postal_code +\n",
     "            '&fuel=' +\n",
     "            fuel_type +\n",
     "            '&method=all&maxAge=0')\n",
     "\n",
-    "    # REPLACE 'YOUR_USER_AGENT_HEADER' with your own\n",
-    "    headers = 'YOUR_USER_AGENT_HEADER'\n",
     "    page = requests.get(url, headers = headers)\n",
     "    soup = BeautifulSoup(page.content, 'html.parser')\n",
     "    soup_pretty = BeautifulSoup(soup.prettify(), 'html.parser')\n",
@@ -77,12 +75,7 @@
     "                       'Date': date_of,\n",
     "                       'Country': country\n",
     "                      })\n",
-    "    \n",
-    "    path = (r'Automated Gas Scraper\\gas_data_' +\n",
-    "            postal_code +\n",
-    "            '_fueltype' +\n",
-    "            fuel_type +\n",
-    "            '.csv')\n",
+    "\n",
     "    with open(path, 'a') as f:\n",
     "        df.to_csv(f, encoding = 'utf-8', mode = 'a', index = False, header = f.tell()==0, lineterminator='\\n')"
    ]
@@ -102,18 +95,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# postal accepts any standard US or CA postal code format\n",
-    "# fuel takes as strings, digits 1-4, correspoding to: 1) Regular, 2) Midgrade, 3) Premium, 4) Diesel\n",
-    "postal = 'YOUR_POSTAL_CODE_HERE'\n",
-    "fuel = 'YOUR_FUEL_TYPE_HERE'\n",
-    "path = (r'Automated Gas Scraper\\gas_data_' + \n",
-    "        postal + \n",
-    "        '_fueltype' + \n",
-    "        fuel + \n",
-    "        '.csv')\n",
+    "# User-filled Variables\n",
+    "postal = 'YOUR_POSTAL_CODE_HERE'      # Replace with any standard US or CA postal code format\n",
+    "fuel = 'YOUR_FUEL_TYPE_HERE'          # Replace with a string, digits 1-4, corresponding to: 1) Regular, 2) Midgrade, 3) Premium, 4) Diesel\n",
+    "headers = {'YOUR_USER_AGENT_HEADER'}  # Your own header can be found at https://httpbin.org/get. Replace with the line starting with <\"User-Agent\": ...>\n",
+    "path = ('YOUR_FILE_DIRECTORY')        # Replace wtih your file directory for scraped data\n",
     "\n",
+    "# After filling variables above, run this cell and the function will call every 24 hours (or otherwise, if changed)\n",
     "while(True):\n",
-    "    price_check(postal, fuel)\n",
+    "    price_check(postal, fuel, headers)\n",
     "    time.sleep(86400)"
    ]
   },
